--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scroll": "^1.9.0",
-    "react-scroll-motion": "^0.3.2",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
