--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^6.16.0",
     "smooth-scrollbar": "^8.8.4",
     "smooth-scrollbar-react": "^2.4.1",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "styled-reset": "^4.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
