--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8",
     "styled-reset": "^4.5.1",
-    "swiper": "^10.3.1"
+    "swiper": "8.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
