--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.18",
     "@types/swiper": "^6.0.0",
     "axios": "^1.5.1",
     "react": "^18.2.0",
