--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "@public/*": ["public/*"],
       "@components/*": ["src/components/*"],
       "@common/*": ["src/components/common/*"],
-      "@img/*": ["src/asset/img/*"],
+      "@img/*": ["src/assets/images/*"]
     }
   },
   "include": ["src", "vite-env.d.ts"],
