--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "@public/*": ["public/*"],
       "@components/*": ["src/components/*"],
       "@common/*": ["src/components/common/*"],
-      "@img/*": ["src/assets/images/*"]
+      "@img/*": ["src/assets/images/*"],
+      "@icon/*": ["src/assets/icons/*"]
     }
   },
   "include": ["src", "vite-env.d.ts"],
