--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,10 @@
       "@components/*": ["src/components/*"],
       "@common/*": ["src/components/common/*"],
       "@img/*": ["src/assets/images/*"],
-      "@icon/*": ["src/assets/icons/*"]
-    }
+      "@icons/*": ["src/assets/icons/*"]
+    },
+    "types": ["vite-plugin-svgr/client"]
   },
-  "include": ["src", "vite-env.d.ts"],
+  "include": ["src", "vite-env.d.ts", "svg.d.ts", "custom.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
