--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-naver-maps": "^0.1.3",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8",
     "styled-reset": "^4.5.1",
     "swiper": "8.4.6"
   },
   "devDependencies": {
+    "@types/navermaps": "^3.7.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
